--- a/build.gradle
+++ b/build.gradle
@@ -13,17 +13,20 @@ repositories {
 
 dependencies {
     annotationProcessor("io.micronaut:micronaut-http-validation")
+    annotationProcessor("io.micronaut.openapi:micronaut-openapi")
+
     implementation("io.micronaut:micronaut-http-client")
     implementation("io.micronaut:micronaut-jackson-databind")
     implementation("jakarta.annotation:jakarta.annotation-api")
-    runtimeOnly("ch.qos.logback:logback-classic")
     implementation("io.micronaut:micronaut-validation")
+    implementation("io.swagger.core.v3:swagger-annotations")
 
+    runtimeOnly("ch.qos.logback:logback-classic")
 }
 
 
 application {
-    mainClass.set("com.lifeway.Application")
+    mainClass.set("com.lifeway.wordcount.Application")
 }
 java {
     sourceCompatibility = JavaVersion.toVersion("17")
