--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ dependencies {
     implementation("jakarta.annotation:jakarta.annotation-api")
     implementation("io.micronaut:micronaut-validation")
     implementation("io.swagger.core.v3:swagger-annotations")
+    implementation("io.micronaut.beanvalidation:micronaut-hibernate-validator")
 
     runtimeOnly("ch.qos.logback:logback-classic")
 }
