Changed simple implementation of WordCountControllerSpec to an implementation that demonstrates an event-driven approach over a state-based approach.  Added implementation dependency for reactive support from project reactor.  Added test dependency for reactive HTTP client support from project reactor.  Changed WordCountController.countWords() and associated tests to use a reactive endpoint that allows the client to decide if the response should be returned synchronously or asynchronously.  Overrode equals and hash for WordCountCommand to only use the id field because that is the only field required to uniquely identify a WordCountCommand.  Added TestConstants to hold constant values that are used in multiple test files.

--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,9 @@ dependencies {
     implementation("io.micronaut:micronaut-validation")
     implementation("io.swagger.core.v3:swagger-annotations")
     implementation("io.micronaut.beanvalidation:micronaut-hibernate-validator")
+    implementation("io.micronaut.reactor:micronaut-reactor")
+
+    testImplementation(implementation("io.micronaut.reactor:micronaut-reactor-http-client"))
 
     runtimeOnly("ch.qos.logback:logback-classic")
 }
